(lang dune 3.20)

(name reus)

(generate_opam_files true)

(source
 (github demaere-oiie/reus))

(authors "Dave Long <dave.long@bluewin.ch>")

(maintainers "Dave Long <dave.long@bluewin.ch>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name reus)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))
